# NESOTS

./: CMakeLists.txt  LICENSE.md  README.md  SphericalUniformization.cpp
apps/: direction_sampling.cpp  hyperbolic_bluenoise.cpp  local_hyperbolic_mapping.cpp  mesh_sampling.cpp  rotation_sampling.cpp  spherical_bluenoise.cpp  vizu_pc.cpp
cmake/: geometry-central.cmake  libigl.cmake  nanothread.cmake  openmp.cmake  polyscope.cmake
src/: Mesh.h  bvh_wrapper.cpp  bvh_wrapper.h  colors.h  conformallayout.cpp  conformallayout.h  cylindricalgeometry.cpp  cylindricalgeometry.h  euclideangeometry.cpp  euclideangeometry.h  fluid_sim_sdot.cpp  fluid_sim_sdot.h  geometric_algorithms.cpp  geometric_algorithms.h  halton.cpp  halton.hpp  hyperbolicgeometry.cpp  hyperbolicgeometry.h  n_spherical_geometry.cpp  n_spherical_geometry.h  nd_hyperbolic_geometry.cpp  nd_hyperbolic_geometry.h  nesots.h  point_cloud_io.cpp  point_cloud_io.h  sampler.h  sampling.cpp  sampling.h  slicedgeometry.h  sphericalgeometry.cpp  sphericalgeometry.h  ssw.cpp  ssw.h  utils.h  yamabeflow.cpp  yamabeflow.h
